Fixed white space in footer, extra links gone, dropdown for products larger

--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -36,9 +36,13 @@
 	}
 
 	.outer-wrap{
-		width: 100%;
-		left: 0;
 		position: absolute;
+		width: 100%;
+		height: 100%;
+		margin: 0;
+		padding: 0;
+		top: 0;
+		left: 0;
 		z-index: 2;
 	}
 
@@ -144,7 +148,7 @@
 
 			//Navigation
 			nav{
-				width: 85%;
+				width: 100%;
 				float: none;
 				position: static;
 				margin: 0 0 0 20%;
@@ -224,7 +228,9 @@
 
 		//Image Slider - Temporary ( revolution is responsive on its own )
 		.slider{
-			height: 200px !important;
+			.tparrows{
+				display: none;
+			}
 		}
 	}
 
@@ -342,11 +348,12 @@
 		ul.products{
 			li{
 				width: 100%;
-				max-width:320px;
-				margin: 0 0 30px 0;
+				max-width: 320px;
+				margin: 0 10px 30px 0;
+				float: left;
 			}
 			.first{
-				margin: 0 0 30px 0;
+				margin: 0 10px 30px 0;
 			}
 		}
 
@@ -642,7 +649,9 @@
 		.mobile{
 			display: block;
 			width: inherit;
+			height: 50px;
 			margin-bottom: 15px;
+			text-indent: 20px;
 			border-radius: 0;
 			border: none;
 		}
@@ -659,12 +668,13 @@
 			margin: 20px 0;
 		}
 		.left{
-			width: 100%;
-			.block{
-				width: 100%;
-				margin: 0 0 30px 0;
-				line-height: 18px;
-			}
+			display: none;
+			// width: 100%;
+			// .block{
+			// 	width: 100%;
+			// 	margin: 0 0 30px 0;
+			// 	line-height: 18px;
+			// }
 		}
 		.right{
 			float: none;
